fixed spacing

--- a/src/views/Home/Tracks/index.scss
+++ b/src/views/Home/Tracks/index.scss
@@ -11,7 +11,7 @@
     &--image {
       width: 45%;
       margin-top: 10px;
-      height: 120px;
+      height: 100px;
     }
   }
 
